# other

./: pyproject.toml
src/: __init__.py
tests/: test_capitalize.py
